fix blockquote alignment

--- a/client/app/styles/blockquote.styl
+++ b/client/app/styles/blockquote.styl
@@ -41,7 +41,6 @@ blockquote
         margin-bottom -0.3em
         @media (min-width $bp-sm)
           display inline-block
-          margin-left -0.2em
 
   &.album
     text-align left
